--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,6 +31,57 @@
 
 en:
   hello: "Hello world"
+  controller:
+    application:
+      invalid_em_pas: "Invalid email/password combinatio11n"
+    users:
+      welcome: "Welcome to the Sample App!!"
+      users_not_exist: "User doesn't exist"
   layouts:
     application:
-      ecommerce43: "Ecommerce43"
+      book: "Book Store"
+    header:
+      book: "BookStore"
+      home: "Home"
+      help: "Help"
+      log_in: "Log in"
+      log_out: "Log out"
+      profile: "Profile"
+      setting: "Settings"
+      users: "Users"
+      account: "Account"
+    footer:
+      book: "Book Store"
+      the : "The"
+      by: "by"
+      by_name: "Hòa & Chinh"
+      about: "About"
+      contact: "Contact"
+      news: "News"
+  sessions:
+    new:
+      log_in: "Log in"
+      remember_me: "Remember me on this computer"
+      new_user: "New user?"
+      sign_up: "Sign up now!"
+  shared:
+    error:
+      form_errors: "The form contains"
+  static_pages:
+    about:
+      about: "About"
+    contact:
+      contact: "Contact"
+      contact_page: "contact page"
+      contact_book: "Contact the Ruby on Rails Tutorial about Book Store"
+    help:
+      help: "Help"
+    home:
+      welcome: "Welcome to Book Store"
+      home_page: "This is the home page for the"
+      book: "Book Store"
+      sample_app: "sample application."
+      sign_up: "Sign up now!"
+    users:
+      sign_up: "Sign up"
+      create_acc: "Create my account"
